--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@ body, html{
   overflow-x: hidden;
 }
 .bg-img{
-  background-image: url(assets/images/Purple-Lens.png);
+  background-image: url(images/Purple-Lens.png);
   background-blend-mode: hard-light;
   /* background-position:bottom;
   background-repeat: no-repeat;
