--- a/src/index.css
+++ b/src/index.css
@@ -161,3 +161,70 @@ select:focus{
       bottom:0
       }
   }
+  form{
+    border-radius: 12px;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    /* width: 700px; */
+    @apply py-7 md:px-14 bg-transparent md:bg-[#FFFFFF05]
+  }
+  input[type=text], input[type=number], input[type=email], select, textarea{
+    border-radius: 4px;
+    border: 1px solid #FFF;
+    background: rgba(255, 255, 255, 0.03);
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    width: 90%;
+    /* margin: auto; */
+    /* margin-top: 30px; */
+    padding: 10px 20px;
+    color: white;
+    font-size: 16px;
+    display: block;
+    /* height: 40px; */
+  }
+  ::placeholder {
+    color: white;
+  }
+  label{
+   
+    @apply text-white mb-2
+  }
+  .check-box label {
+    display: inline-block;
+    cursor: pointer;
+    position: relative;
+    padding-left: 25px;
+    margin-right: 15px;
+    font-size: 11px;
+    padding-bottom: 0;
+  }
+  .check-box label:before {
+    content: "";
+    display: inline-block;
+   
+    width: 16px;
+    height: 16px;
+    border-radius: 3px;
+    margin-right: 10px;
+    position: absolute;
+    left: 0;
+    /* top: 0; */
+    bottom: 1px;
+    outline: #fff;
+    border: 1px solid #fff;
+    background-color: none;
+    box-shadow: inset 0px 2px 3px 0px rgba(0, 0, 0, .3), 0px 1px 0px 0px rgba(255, 255, 255, .8);
+  }
+  
+  input[type=checkbox] {
+    display: none;
+
+  }
+  
+  input[type=checkbox]:checked + label:before {
+    content: "\2713";
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, .2);
+    font-size: 12px;
+    color: #fff;
+    text-align: center;
+    line-height: 12px;
+  }
